// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceLoginScreen snapshots renders default state for deep link 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View>
      <View
        style={
          {
            "flex": 1,
            "gap": 16,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              {
                "fontWeight": "normal",
              },
            ]
          }
        >
          BCSC.Services.WantToLogin

          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 26,
                  "fontWeight": "bold",
                },
                undefined,
              ]
            }
          >
            BC Parks
            ?
          </Text>
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              {
                "lineHeight": 30,
              },
            ]
          }
        >
          BCSC.Services.RequestedInformation
        </Text>
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#D8D8D8",
                "borderRadius": 8,
                "borderWidth": 1,
                "display": "flex",
                "gap": 16,
                "overflow": "hidden",
                "padding": 16,
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  [
                    {
                      "color": "#003366",
                      "flexShrink": 1,
                      "fontSize": 20,
                    },
                    {
                      "marginBottom": 8,
                    },
                  ],
                ]
              }
            >
              BCSC.Services.FromAccountPrefix
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "bold",
                    },
                    {
                      "color": "#003366",
                    },
                  ]
                }
              >
                 
                BCSC.Services.FromAccount
              </Text>
            </Text>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  undefined,
                ]
              }
            >
              Name, Email
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="com.ariesbifold:id/ReadPrivacyPolicy"
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "#D8D8D8",
                    "borderRadius": 8,
                    "borderWidth": 1,
                    "display": "flex",
                    "gap": 16,
                    "overflow": "hidden",
                    "padding": 16,
                  },
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  },
                ]
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    {
                      "color": "#003366",
                      "flexShrink": 1,
                      "fontSize": 20,
                    },
                  ]
                }
              >
                BCSC.Services.PrivacyNotice
              </Text>
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#003366",
                      "fontSize": 30,
                    },
                    undefined,
                    {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.Services.ReportSuspiciousPrefix
           
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            BCSC.Services.ReportSuspicious
          </Text>
        </Text>
      </View>
      <View
        style={
          {
            "marginTop": "auto",
          }
        }
      >
        <View
          style={
            {
              "marginBottom": 10,
            }
          }
        >
          <View
            accessibilityLabel="Continue"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#003366",
                "borderRadius": 4,
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="com.ariesbifold:id/ServiceLoginContinue"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    [
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "BCSans-Regular",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      false,
                      false,
                      false,
                    ],
                  ]
                }
              >
                Continue
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityLabel="Cancel"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="com.ariesbifold:id/ServiceLoginCancel"
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  [
                    undefined,
                    false,
                    false,
                    false,
                  ],
                ]
              }
            >
              Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`ServiceLoginScreen snapshots renders default state for quick login, with privacy policy 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View>
      <View
        style={
          {
            "flex": 1,
            "gap": 16,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              {
                "fontWeight": "normal",
              },
            ]
          }
        >
          BCSC.Services.WantToLogin

          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 26,
                  "fontWeight": "bold",
                },
                undefined,
              ]
            }
          >
            BC Parks
            ?
          </Text>
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              {
                "lineHeight": 30,
              },
            ]
          }
        >
          BCSC.Services.RequestedInformation
        </Text>
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#D8D8D8",
                "borderRadius": 8,
                "borderWidth": 1,
                "display": "flex",
                "gap": 16,
                "overflow": "hidden",
                "padding": 16,
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  [
                    {
                      "color": "#003366",
                      "flexShrink": 1,
                      "fontSize": 20,
                    },
                    {
                      "marginBottom": 8,
                    },
                  ],
                ]
              }
            >
              BCSC.Services.FromAccountPrefix
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "bold",
                    },
                    {
                      "color": "#003366",
                    },
                  ]
                }
              >
                 
                BCSC.Services.FromAccount
              </Text>
            </Text>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  undefined,
                ]
              }
            >
              Name, Email
            </Text>
          </View>
          <View
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": undefined,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "opacity": 1,
              }
            }
            testID="com.ariesbifold:id/ReadPrivacyPolicy"
          >
            <View
              style={
                [
                  {
                    "backgroundColor": "#FFFFFF",
                    "borderColor": "#D8D8D8",
                    "borderRadius": 8,
                    "borderWidth": 1,
                    "display": "flex",
                    "gap": 16,
                    "overflow": "hidden",
                    "padding": 16,
                  },
                  {
                    "alignItems": "center",
                    "display": "flex",
                    "flexDirection": "row",
                    "justifyContent": "space-between",
                  },
                ]
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    {
                      "color": "#003366",
                      "flexShrink": 1,
                      "fontSize": 20,
                    },
                  ]
                }
              >
                BCSC.Services.PrivacyNotice
              </Text>
              <Text
                allowFontScaling={false}
                selectable={false}
                style={
                  [
                    {
                      "color": "#003366",
                      "fontSize": 30,
                    },
                    undefined,
                    {
                      "fontFamily": "Material Icons",
                      "fontStyle": "normal",
                      "fontWeight": "normal",
                    },
                    {},
                  ]
                }
              >
                
              </Text>
            </View>
          </View>
        </View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.Services.ReportSuspiciousPrefix
           
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            BCSC.Services.ReportSuspicious
          </Text>
        </Text>
      </View>
      <View
        style={
          {
            "marginTop": "auto",
          }
        }
      >
        <View
          style={
            {
              "marginBottom": 10,
            }
          }
        >
          <View
            accessibilityLabel="Continue"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#003366",
                "borderRadius": 4,
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="com.ariesbifold:id/ServiceLoginContinue"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    [
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "BCSans-Regular",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      false,
                      false,
                      false,
                    ],
                  ]
                }
              >
                Continue
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityLabel="Cancel"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="com.ariesbifold:id/ServiceLoginCancel"
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  [
                    undefined,
                    false,
                    false,
                    false,
                  ],
                ]
              }
            >
              Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`ServiceLoginScreen snapshots renders default state for quick login, without privacy policy 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View>
      <View
        style={
          {
            "flex": 1,
            "gap": 16,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              {
                "fontWeight": "normal",
              },
            ]
          }
        >
          BCSC.Services.WantToLogin

          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 26,
                  "fontWeight": "bold",
                },
                undefined,
              ]
            }
          >
            BC Parks
            ?
          </Text>
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              {
                "lineHeight": 30,
              },
            ]
          }
        >
          BCSC.Services.RequestedInformation
        </Text>
        <View
          style={
            {
              "gap": 16,
            }
          }
        >
          <View
            style={
              {
                "backgroundColor": "#FFFFFF",
                "borderColor": "#D8D8D8",
                "borderRadius": 8,
                "borderWidth": 1,
                "display": "flex",
                "gap": 16,
                "overflow": "hidden",
                "padding": 16,
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  [
                    {
                      "color": "#003366",
                      "flexShrink": 1,
                      "fontSize": 20,
                    },
                    {
                      "marginBottom": 8,
                    },
                  ],
                ]
              }
            >
              BCSC.Services.FromAccountPrefix
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "bold",
                    },
                    {
                      "color": "#003366",
                    },
                  ]
                }
              >
                 
                BCSC.Services.FromAccount
              </Text>
            </Text>
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  undefined,
                ]
              }
            >
              Name, Email
            </Text>
          </View>
        </View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.Services.ReportSuspiciousPrefix
           
          <Text
            maxFontSizeMultiplier={2}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                undefined,
              ]
            }
          >
            BCSC.Services.ReportSuspicious
          </Text>
        </Text>
      </View>
      <View
        style={
          {
            "marginTop": "auto",
          }
        }
      >
        <View
          style={
            {
              "marginBottom": 10,
            }
          }
        >
          <View
            accessibilityLabel="Continue"
            accessibilityRole="button"
            accessibilityState={
              {
                "busy": undefined,
                "checked": undefined,
                "disabled": false,
                "expanded": undefined,
                "selected": undefined,
              }
            }
            accessibilityValue={
              {
                "max": undefined,
                "min": undefined,
                "now": undefined,
                "text": undefined,
              }
            }
            accessible={true}
            collapsable={false}
            focusable={true}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            style={
              {
                "backgroundColor": "#003366",
                "borderRadius": 4,
                "opacity": 1,
                "padding": 16,
              }
            }
            testID="com.ariesbifold:id/ServiceLoginContinue"
          >
            <View
              style={
                {
                  "alignItems": "center",
                  "flexDirection": "row",
                  "justifyContent": "center",
                }
              }
            >
              <Text
                maxFontSizeMultiplier={2}
                style={
                  [
                    {
                      "color": "#313132",
                      "fontFamily": "BCSans-Regular",
                      "fontSize": 18,
                      "fontWeight": "normal",
                    },
                    [
                      {
                        "color": "#FFFFFF",
                        "fontFamily": "BCSans-Regular",
                        "fontSize": 18,
                        "fontWeight": "bold",
                        "textAlign": "center",
                      },
                      false,
                      false,
                      false,
                    ],
                  ]
                }
              >
                Continue
              </Text>
            </View>
          </View>
        </View>
        <View
          accessibilityLabel="Cancel"
          accessibilityRole="button"
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": false,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="com.ariesbifold:id/ServiceLoginCancel"
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
            }
          >
            <Text
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  [
                    undefined,
                    false,
                    false,
                    false,
                  ],
                ]
              }
            >
              Cancel
            </Text>
          </View>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`ServiceLoginScreen snapshots renders loading state 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <ActivityIndicator
    size="large"
  />
</RNCSafeAreaView>
`;

exports[`ServiceLoginScreen snapshots renders unavailable state 1`] = `
<RNCSafeAreaView
  edges={
    {
      "bottom": "additive",
      "left": "off",
      "right": "off",
      "top": "off",
    }
  }
  style={
    {
      "flex": 1,
    }
  }
>
  <RCTScrollView
    contentContainerStyle={
      {
        "flexGrow": 1,
        "justifyContent": "space-between",
        "padding": 16,
      }
    }
  >
    <View>
      <View
        style={
          {
            "flex": 1,
            "gap": 16,
          }
        }
      >
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 26,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BC Parks
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              {
                "lineHeight": 30,
              },
            ]
          }
        >
          BCSC.Services.NoLoginInstructions
        </Text>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "normal",
              },
              {
                "lineHeight": 30,
              },
            ]
          }
        >
          BCSC.Services.NoLoginProof
        </Text>
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "opacity": 1,
            }
          }
          testID="com.ariesbifold:id/GoToServiceClient"
        >
          <View
            style={
              [
                {
                  "backgroundColor": "#FFFFFF",
                  "borderColor": "#D8D8D8",
                  "borderRadius": 8,
                  "borderWidth": 1,
                  "display": "flex",
                  "gap": 16,
                  "overflow": "hidden",
                  "padding": 16,
                },
                {
                  "alignItems": "center",
                  "display": "flex",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                },
              ]
            }
          >
            <Text
              ellipsizeMode="tail"
              maxFontSizeMultiplier={2}
              style={
                [
                  {
                    "color": "#313132",
                    "fontFamily": "BCSans-Regular",
                    "fontSize": 18,
                    "fontWeight": "normal",
                  },
                  {
                    "color": "#003366",
                    "flexShrink": 1,
                    "fontSize": 20,
                  },
                ]
              }
            >
              BCSC.Services.Goto
               
              BC Parks
            </Text>
            <Text
              allowFontScaling={false}
              selectable={false}
              style={
                [
                  {
                    "color": "#003366",
                    "fontSize": 30,
                  },
                  undefined,
                  {
                    "fontFamily": "Material Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  {},
                ]
              }
            >
              
            </Text>
          </View>
        </View>
        <Text
          maxFontSizeMultiplier={2}
          style={
            [
              {
                "color": "#313132",
                "fontFamily": "BCSans-Regular",
                "fontSize": 18,
                "fontWeight": "bold",
              },
              undefined,
            ]
          }
        >
          BCSC.Services.ReportSuspiciousPrefix
           
          <Text
            accessibilityLabel="BCSC.Services.ReportSuspicious"
            accessibilityRole="link"
            accessible={true}
            maxFontSizeMultiplier={2}
            onPress={[Function]}
            style={
              [
                {
                  "color": "#313132",
                  "fontFamily": "BCSans-Regular",
                  "fontSize": 18,
                  "fontWeight": "normal",
                },
                [
                  {
                    "alignSelf": "flex-start",
                    "color": "#1A5A96",
                    "textDecorationLine": "underline",
                  },
                  {},
                ],
              ]
            }
            testID="com.ariesbifold:id/ReportSuspiciousLink"
          >
            BCSC.Services.ReportSuspicious
          </Text>
        </Text>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
